# scholar-data-ingest

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_request.http
data/csv/: README.md
data/postgres/: schema.sql
data/tmp/: README.md
readme_files/: database_schema.drawio  semantic_scholar_corpus_entry_example.json
src/ldig/: da.py  ldig.py
src/scholar_data_digest/: logging_config.ini
src/scholar_data_digest/api/: server.py
src/scholar_data_digest/process/: __init__.py  _application.py  _ingester.py  _my_application.py
src/scholar_data_ingest/: __init__.py
src/scholar_data_ingest/api/: server.py
src/scholar_data_ingest/process/: __init__.py  _application.py  _ingester.py  _postgres_adapter.py
