[tool.poetry]
name = "scholar-data-digest"
version = "0.1.0"
description = "Request and digest academic papers."
readme = "README.md"
authors = ["zushicat2000"]

[tool.poetry.dependencies]
python = "~3.7"

json-rpc = "^1.13.0"
psycopg2 = "^2.8.6"
requests = "^2.25.0"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
